--- a/home.html
+++ b/home.html
@@ -13,13 +13,14 @@
 </head>
 
 <body>
-    <h1>Welcome to monsoon internship</h1>
+    <h1 id="id1">Welcome to monsoon internship</h1>
+    <h1>Demo</h1>
     <h2>Welcome to monsoon internship</h2>
     <h3>Welcome to monsoon internship</h3>
     <h4>Welcome to monsoon internship</h4>
     <h5>Welcome to monsoon internship</h5>
     <h6>Welcome to monsoon internship</h6>
-    <p>
+    <p id="id1">
         <i>the monsoon internship offers 1 month internship on various technologies for graduates.</i>
         </p>
     <ul>
@@ -31,7 +32,7 @@
             <li>list2</li>
         </ol>
     </ul>
-    <img src="lki.jpg" alt="" width="500" height="300">
+    <img src="lki.jpg" alt="" width="500" height="300", class="class1">
     <img src="../pic sample/internday1sample1.jpg" alt="" width="500" height="300">
     <br>
     <b>internship on mern: </b>
@@ -49,8 +50,26 @@
             <td>jose</td>
             <td>pala</td>
         </tr>
-
-
-
     </table>
+    
+    <!-- day2 -->
+    <!-- <br>
+    <label for="">First name</label>
+    <input type="text" name="fname" id="fname">
+    <br>
+    <label for="" >Password</label>
+    <input type="password" name="Password" id="Password">
+    <br><br><br>
+    <label for="textarea""> text area </label>
+    <textarea id="textarea" name="textarea" rows="5" cols="10"></textarea>
+     -->
+
+     <script>
+        console.log("demostrating js");
+     </script>
+     <!-- <script src="script.js"></script> -->
+     <!-- <script src="basics.js"></script> -->
+     <!-- <script src="functiondemo.js"></script> -->
+     <script src="control.js"></script>
+</body>
 </html>
